shift and unshift fail for QQmlSequence types

QQmlSequence is a Custom array type, so must use the generic
shift/unshift implementation.

Task-number: QTBUG-40244
Change-Id: I491d9dc87a3a204daad4cf7460ffac81165056a5
Reviewed-by: Lars Knoll <lars.knoll@digia.com>